# interop-cpp-rust

./: README.md
cpp-lib-2/: CMakeLists.txt
cpp-lib-2/src/: lib.cpp
cpp-user/: CMakeLists.txt
cpp-user/src/: main.cpp
rust-lib/: Cargo.toml  build.rs
rust-lib/src/: lib.rs
rust-user-2/: Cargo.toml  b.bat
rust-user-2/src/: main.rs
